@@ -18,11 +18,11 @@
 package org.photonvision.common.networking;
 
 import java.io.IOException;
+import java.net.NetworkInterface;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import org.photonvision.common.hardware.Platform;
 import org.photonvision.common.logging.LogGroup;
 import org.photonvision.common.logging.Logger;
@@ -52,26 +52,16 @@ public class NetworkUtils {
         }
     }
 
-    public static class NMDeviceInfo {
+    /**
+     * Contains data about network devices retrieved from "nmcli device show"
+     *
+     * @param connName The human-readable name used by "nmcli con"
+     * @param devName The underlying device name, used by dhclient
+     * @param nmType The NetworkManager device type
+     */
+    public static record NMDeviceInfo(String connName, String devName, NMType nmType) {
         public NMDeviceInfo(String c, String d, String type) {
-            connName = c;
-            devName = d;
-            nmType = NMType.typeForString(type);
-        }
-
-        public final String connName; // Human-readable name used by "nmcli con"
-        public final String devName; // underlying device, used by dhclient
-        public final NMType nmType;
-
-        @Override
-        public String toString() {
-            return "NMDeviceInfo [connName="
-                    + connName
-                    + ", devName="
-                    + devName
-                    + ", nmType="
-                    + nmType
-                    + "]";
+            this(c, d, NMType.typeForString(type));
         }
     }
 
@@ -102,30 +92,50 @@ public class NetworkUtils {
                     Pattern.compile("GENERAL.CONNECTION:(.*)\nGENERAL.DEVICE:(.*)\nGENERAL.TYPE:(.*)");
             Matcher matcher = pattern.matcher(out);
             while (matcher.find()) {
-                ret.add(new NMDeviceInfo(matcher.group(1), matcher.group(2), matcher.group(3)));
+                if (!matcher.group(2).equals("lo")) {
+                    // only include non-loopback devices
+                    ret.add(new NMDeviceInfo(matcher.group(1), matcher.group(2), matcher.group(3)));
+                }
             }
         } catch (IOException e) {
-            logger.error("Could not get active NM ifaces!", e);
+            logger.error("Could not get active network interfaces!", e);
         }
 
-        logger.debug("Found network interfaces:\n" + ret);
+        logger.debug("Found network interfaces: " + ret);
 
         allInterfaces = ret;
         return ret;
     }
 
+    /**
+     * Returns an immutable list of active network interfaces.
+     *
+     * @return The list.
+     */
     public static List<NMDeviceInfo> getAllActiveInterfaces() {
         // Seems like if an interface exists but isn't actually connected, the connection name will be
         // an empty string. Check here and only return connections with non-empty names
-        return getAllInterfaces().stream()
-                .filter(it -> !it.connName.trim().isEmpty())
-                .collect(Collectors.toList());
+        return getAllInterfaces().stream().filter(it -> !it.connName.trim().isEmpty()).toList();
     }
 
+    /**
+     * Returns an immutable list of all wired network interfaces.
+     *
+     * @return The list.
+     */
     public static List<NMDeviceInfo> getAllWiredInterfaces() {
-        return getAllActiveInterfaces().stream()
-                .filter(it -> it.nmType == NMType.NMTYPE_ETHERNET)
-                .collect(Collectors.toList());
+        return getAllInterfaces().stream()
+                .filter(it -> it.nmType.equals(NMType.NMTYPE_ETHERNET))
+                .toList();
+    }
+
+    /**
+     * Returns an immutable list of all wired and active network interfaces.
+     *
+     * @return The list.
+     */
+    public static List<NMDeviceInfo> getAllActiveWiredInterfaces() {
+        return getAllWiredInterfaces().stream().filter(it -> !it.connName.isBlank()).toList();
     }
 
     public static NMDeviceInfo getNMinfoForConnName(String connName) {
@@ -135,5 +145,62 @@ public class NetworkUtils {
             }
         }
         return null;
+    }
+
+    public static NMDeviceInfo getNMinfoForDevName(String devName) {
+        for (NMDeviceInfo info : getAllActiveInterfaces()) {
+            if (info.devName.equals(devName)) {
+                return info;
+            }
+        }
+        logger.warn("Could not find a match for network device " + devName);
+        return null;
+    }
+
+    public static String getActiveConnection(String devName) {
+        var shell = new ShellExec(true, true);
+        try {
+            shell.executeBashCommand(
+                    "nmcli -g GENERAL.CONNECTION dev show \"" + devName + "\"", true, false);
+            return shell.getOutput().strip();
+        } catch (Exception e) {
+            logger.error("Exception from nmcli!");
+        }
+        return "";
+    }
+
+    public static boolean connDoesNotExist(String connName) {
+        var shell = new ShellExec(true, true);
+        try {
+            shell.executeBashCommand(
+                    "nmcli -g GENERAL.STATE connection show \"" + connName + "\"", true, false);
+            return (shell.getExitCode() == 10);
+        } catch (Exception e) {
+            logger.error("Exception from nmcli!");
+        }
+        return false;
+    }
+
+    public static String getIPAddresses(String iFaceName) {
+        if (iFaceName == null || iFaceName.isBlank()) {
+            return "";
+        }
+        List<String> addresses = new ArrayList<String>();
+        try {
+            var iFace = NetworkInterface.getByName(iFaceName);
+            if (iFace != null && iFace.isUp()) {
+                for (var addr : iFace.getInterfaceAddresses()) {
+                    var addrStr = addr.getAddress().toString();
+                    if (addrStr.startsWith("/")) {
+                        addrStr = addrStr.substring(1);
+                    }
+                    addrStr = addrStr + "/" + addr.getNetworkPrefixLength();
+                    addresses.add(addrStr);
+                }
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+        return String.join(", ", addresses);
     }
 }
