@@ -17,16 +17,16 @@
 
 package org.photonvision.vision.pipe.impl;
 
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
+import org.apache.commons.io.FileUtils;
 import org.opencv.calib3d.Calib3d;
 import org.opencv.core.*;
-import org.opencv.core.Mat;
-import org.opencv.core.MatOfDouble;
-import org.opencv.core.MatOfPoint2f;
-import org.opencv.core.Size;
+import org.opencv.imgcodecs.Imgcodecs;
 import org.photonvision.common.logging.LogGroup;
 import org.photonvision.common.logging.Logger;
 import org.photonvision.common.util.math.MathUtils;
@@ -36,15 +36,31 @@ import org.photonvision.mrcal.MrCalJNILoader;
 import org.photonvision.vision.calibration.BoardObservation;
 import org.photonvision.vision.calibration.CameraCalibrationCoefficients;
 import org.photonvision.vision.calibration.CameraLensModel;
-import org.photonvision.vision.calibration.JsonImageMat;
 import org.photonvision.vision.calibration.JsonMatOfDouble;
+import org.photonvision.vision.frame.FrameStaticProperties;
 import org.photonvision.vision.pipe.CVPipe;
+import org.photonvision.vision.pipe.impl.FindBoardCornersPipe.FindBoardCornersPipeResult;
 
 public class Calibrate3dPipe
         extends CVPipe<
-                List<FindBoardCornersPipe.FindBoardCornersPipeResult>,
+                Calibrate3dPipe.CalibrationInput,
                 CameraCalibrationCoefficients,
                 Calibrate3dPipe.CalibratePipeParams> {
+    public static class CalibrationInput {
+        final List<FindBoardCornersPipe.FindBoardCornersPipeResult> observations;
+        final FrameStaticProperties imageProps;
+        final Path imageSavePath;
+
+        public CalibrationInput(
+                List<FindBoardCornersPipeResult> observations,
+                FrameStaticProperties imageProps,
+                Path imageSavePath) {
+            this.observations = observations;
+            this.imageProps = imageProps;
+            this.imageSavePath = imageSavePath;
+        }
+    }
+
     // For logging
     private static final Logger logger = new Logger(Calibrate3dPipe.class, LogGroup.General);
 
@@ -52,7 +68,8 @@ public class Calibrate3dPipe
     private final Mat stdDeviationsIntrinsics = new Mat();
     private final Mat stdDeviationsExtrinsics = new Mat();
 
-    // Contains the re projection error of each snapshot by re projecting the corners we found and
+    // Contains the re projection error of each snapshot by re projecting the
+    // corners we found and
     // finding the Euclidean distance between the actual corners.
     private final Mat perViewErrors = new Mat();
 
@@ -63,33 +80,43 @@ public class Calibrate3dPipe
      * @return Result of processing.
      */
     @Override
-    protected CameraCalibrationCoefficients process(
-            List<FindBoardCornersPipe.FindBoardCornersPipeResult> in) {
-        in =
-                in.stream()
+    protected CameraCalibrationCoefficients process(CalibrationInput in) {
+        var filteredIn =
+                in.observations.stream()
                         .filter(
                                 it ->
                                         it != null
                                                 && it.imagePoints != null
                                                 && it.objectPoints != null
                                                 && it.size != null)
-                        .collect(Collectors.toList());
+                        .toList();
 
         CameraCalibrationCoefficients ret;
         var start = System.nanoTime();
+
         if (MrCalJNILoader.getInstance().isLoaded() && params.useMrCal) {
             logger.debug("Calibrating with mrcal!");
-            ret = calibrateMrcal(in);
+            ret =
+                    calibrateMrcal(
+                            filteredIn,
+                            in.imageProps.horizontalFocalLength,
+                            in.imageProps.verticalFocalLength,
+                            in.imageSavePath);
         } else {
             logger.debug("Calibrating with opencv!");
-            ret = calibrateOpenCV(in);
+            ret =
+                    calibrateOpenCV(
+                            filteredIn,
+                            in.imageProps.horizontalFocalLength,
+                            in.imageProps.verticalFocalLength,
+                            in.imageSavePath);
         }
         var dt = System.nanoTime() - start;
 
         if (ret != null)
             logger.info(
                     "CALIBRATION SUCCESS for res "
-                            + in.get(0).size
+                            + in.observations.get(0).size
                             + " in "
                             + dt / 1e6
                             + "ms! camMatrix: \n"
@@ -103,38 +130,60 @@ public class Calibrate3dPipe
     }
 
     protected CameraCalibrationCoefficients calibrateOpenCV(
-            List<FindBoardCornersPipe.FindBoardCornersPipeResult> in) {
-        List<Mat> objPoints = in.stream().map(it -> it.objectPoints).collect(Collectors.toList());
-        List<Mat> imgPts = in.stream().map(it -> it.imagePoints).collect(Collectors.toList());
-        if (objPoints.size() != imgPts.size()) {
+            List<FindBoardCornersPipe.FindBoardCornersPipeResult> in,
+            double fxGuess,
+            double fyGuess,
+            Path imageSavePath) {
+        List<MatOfPoint3f> objPointsIn = in.stream().map(it -> it.objectPoints).toList();
+        List<MatOfPoint2f> imgPointsIn = in.stream().map(it -> it.imagePoints).toList();
+        List<MatOfFloat> levelsArr = in.stream().map(it -> it.levels).toList();
+
+        if (objPointsIn.size() != imgPointsIn.size() || objPointsIn.size() != levelsArr.size()) {
             logger.error("objpts.size != imgpts.size");
             return null;
         }
 
-        Mat cameraMatrix = new Mat();
+        // And delete rows depending on the level -- otherwise, level has no impact for opencv
+        List<Mat> objPoints = new ArrayList<>();
+        List<Mat> imgPoints = new ArrayList<>();
+        for (int i = 0; i < objPointsIn.size(); i++) {
+            MatOfPoint3f objPtsOut = new MatOfPoint3f();
+            MatOfPoint2f imgPtsOut = new MatOfPoint2f();
+
+            deleteIgnoredPoints(
+                    objPointsIn.get(i), imgPointsIn.get(i), levelsArr.get(i), objPtsOut, imgPtsOut);
+
+            objPoints.add(objPtsOut);
+            imgPoints.add(imgPtsOut);
+        }
+
+        Mat cameraMatrix = new Mat(3, 3, CvType.CV_64F);
         MatOfDouble distortionCoefficients = new MatOfDouble();
         List<Mat> rvecs = new ArrayList<>();
         List<Mat> tvecs = new ArrayList<>();
 
-        // RMS of the calibration
-        double calibrationAccuracy;
+        // initial camera matrix guess
+        double cx = (in.get(0).size.width / 2.0) - 0.5;
+        double cy = (in.get(0).size.width / 2.0) - 0.5;
+        cameraMatrix.put(0, 0, new double[] {fxGuess, 0, cx, 0, fyGuess, cy, 0, 0, 1});
 
         try {
-            // FindBoardCorners pipe outputs all the image points, object points, and frames to calculate
+            // FindBoardCorners pipe outputs all the image points, object points, and frames
+            // to calculate
             // imageSize from, other parameters are output Mats
 
-            calibrationAccuracy =
-                    Calib3d.calibrateCameraExtended(
-                            objPoints,
-                            imgPts,
-                            new Size(in.get(0).size.width, in.get(0).size.height),
-                            cameraMatrix,
-                            distortionCoefficients,
-                            rvecs,
-                            tvecs,
-                            stdDeviationsIntrinsics,
-                            stdDeviationsExtrinsics,
-                            perViewErrors);
+            Calib3d.calibrateCameraExtended(
+                    objPoints,
+                    imgPoints,
+                    new Size(in.get(0).size.width, in.get(0).size.height),
+                    cameraMatrix,
+                    distortionCoefficients,
+                    rvecs,
+                    tvecs,
+                    stdDeviationsIntrinsics,
+                    stdDeviationsExtrinsics,
+                    perViewErrors,
+                    Calib3d.CALIB_USE_LU + Calib3d.CALIB_USE_INTRINSIC_GUESS);
         } catch (Exception e) {
             logger.error("Calibration failed!", e);
             e.printStackTrace();
@@ -156,12 +205,15 @@ public class Calibrate3dPipe
                         .collect(Collectors.toList());
 
         var observations =
-                createObservations(in, cameraMatrix, distortionCoefficients, rvecs, tvecs, inliners, null);
+                createObservations(
+                        in, cameraMatrix, distortionCoefficients, rvecs, tvecs, null, imageSavePath);
 
         cameraMatrix.release();
         distortionCoefficients.release();
         rvecs.forEach(Mat::release);
         tvecs.forEach(Mat::release);
+        objPoints.forEach(Mat::release);
+        imgPoints.forEach(Mat::release);
 
         return new CameraCalibrationCoefficients(
                 in.get(0).size,
@@ -175,23 +227,31 @@ public class Calibrate3dPipe
     }
 
     protected CameraCalibrationCoefficients calibrateMrcal(
-            List<FindBoardCornersPipe.FindBoardCornersPipeResult> in) {
+            List<FindBoardCornersPipe.FindBoardCornersPipeResult> in,
+            double fxGuess,
+            double fyGuess,
+            Path imageSavePath) {
         List<MatOfPoint2f> corner_locations =
-                in.stream().map(it -> it.imagePoints).map(MatOfPoint2f::new).collect(Collectors.toList());
+                in.stream().map(it -> it.imagePoints).map(MatOfPoint2f::new).toList();
+
+        List<MatOfFloat> levels = in.stream().map(it -> it.levels).map(MatOfFloat::new).toList();
 
         int imageWidth = (int) in.get(0).size.width;
         int imageHeight = (int) in.get(0).size.height;
-        final double FOCAL_LENGTH_GUESS = 1200;
 
         MrCalResult result =
                 MrCalJNI.calibrateCamera(
                         corner_locations,
+                        levels,
                         params.boardWidth,
                         params.boardHeight,
                         params.squareSize,
                         imageWidth,
                         imageHeight,
-                        FOCAL_LENGTH_GUESS);
+                        (fxGuess + fyGuess) / 2.0);
+
+        levels.forEach(MatOfFloat::release);
+        corner_locations.forEach(MatOfPoint2f::release);
 
         // intrinsics are fx fy cx cy from mrcal
         JsonMatOfDouble cameraMatrixMat =
@@ -234,12 +294,13 @@ public class Calibrate3dPipe
         List<BoardObservation> observations =
                 createObservations(
                         in,
-                        cameraMatrixMat.getAsMat(),
+                        cameraMatrixMat.getAsMatOfDouble(),
                         distortionCoefficientsMat.getAsMatOfDouble(),
                         rvecs,
                         tvecs,
                         result.cornersUsed,
-                        new double[] {result.warp_x, result.warp_y});
+                        new double[] {result.warp_x, result.warp_y},
+                        imageSavePath);
 
         rvecs.forEach(Mat::release);
         tvecs.forEach(Mat::release);
@@ -262,9 +323,18 @@ public class Calibrate3dPipe
             List<Mat> rvecs,
             List<Mat> tvecs,
             List<boolean[]> cornersUsed,
-            double[] calobject_warp) {
+            double[] calobject_warp,
+            Path imageSavePath) {
         List<Mat> objPoints = in.stream().map(it -> it.objectPoints).collect(Collectors.toList());
         List<Mat> imgPts = in.stream().map(it -> it.imagePoints).collect(Collectors.toList());
+
+        // Clear the calibration image folder of any old images before we save the new ones.
+
+        try {
+            FileUtils.cleanDirectory(imageSavePath.toFile());
+        } catch (Exception e) {
+            logger.error("Failed to clean calibration image directory", e);
+        }
 
         // For each observation, calc reprojection error
         Mat jac_temp = new Mat();
@@ -278,7 +348,8 @@ public class Calibrate3dPipe
             // Apply warp, if set
             if (calobject_warp != null && calobject_warp.length == 2) {
                 // mrcal warp model!
-                // The chessboard spans [-1, 1] on the x and y axies. We then let z=k_x(1-x^2)+k_y(1-y^2)
+                // The chessboard spans [-1, 1] on the x and y axies. We then let
+                // z=k_x(1-x^2)+k_y(1-y^2)
 
                 double xmin = 0;
                 double ymin = 0;
@@ -325,24 +396,51 @@ public class Calibrate3dPipe
 
             var camToBoard = MathUtils.opencvRTtoPose3d(rvecs.get(snapshotId), tvecs.get(snapshotId));
 
-            JsonImageMat image = null;
             var inputImage = in.get(snapshotId).inputImage;
+            Path image_path = null;
+            String snapshotName = "img" + i + ".png";
             if (inputImage != null) {
-                image = new JsonImageMat(inputImage);
+                image_path = Paths.get(imageSavePath.toString(), snapshotName);
+                Imgcodecs.imwrite(image_path.toString(), inputImage);
             }
+
             observations.add(
                     new BoardObservation(
                             i_objPts,
                             i_imgPts,
                             reprojectionError,
                             camToBoard,
-                            cornersUsed.get(snapshotId),
-                            "img" + snapshotId + ".png",
-                            image));
+                            image_path));
         }
         jac_temp.release();
 
         return observations;
+    }
+
+    /** Delete all rows of mats where level is < 0. Useful for opencv */
+    private void deleteIgnoredPoints(
+            MatOfPoint3f objPtsMatIn,
+            MatOfPoint2f imgPtsMatIn,
+            MatOfFloat levelsMat,
+            MatOfPoint3f objPtsMatOut,
+            MatOfPoint2f imgPtsMatOut) {
+        var levels = levelsMat.toArray();
+        var objPtsIn = objPtsMatIn.toArray();
+        var imgPtsIn = imgPtsMatIn.toArray();
+
+        var objPtsOut = new ArrayList<Point3>();
+        var imgPtsOut = new ArrayList<Point>();
+
+        for (int i = 0; i < levels.length; i++) {
+            if (levels[i] >= 0) {
+                // point survives
+                objPtsOut.add(objPtsIn[i]);
+                imgPtsOut.add(imgPtsIn[i]);
+            }
+        }
+
+        objPtsMatOut.fromList(objPtsOut);
+        imgPtsMatOut.fromList(imgPtsOut);
     }
 
     public static class CalibratePipeParams {
