@@ -17,21 +17,25 @@
 
 package org.photonvision.vision.processes;
 
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
 
 import edu.wpi.first.cscore.VideoMode;
+import java.io.IOException;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
-import java.util.stream.Collectors;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.photonvision.common.configuration.CameraConfiguration;
 import org.photonvision.common.configuration.ConfigManager;
 import org.photonvision.common.dataflow.CVPipelineResultConsumer;
 import org.photonvision.common.util.TestUtils;
-import org.photonvision.vision.camera.USBCameraSource;
+import org.photonvision.jni.PhotonTargetingJniLoader;
+import org.photonvision.vision.camera.PVCameraInfo;
+import org.photonvision.vision.camera.QuirkyCamera;
+import org.photonvision.vision.camera.USBCameras.USBCameraSource;
 import org.photonvision.vision.frame.FrameProvider;
 import org.photonvision.vision.frame.FrameStaticProperties;
 import org.photonvision.vision.frame.provider.FileFrameProvider;
@@ -40,7 +44,16 @@ import org.photonvision.vision.pipeline.result.CVPipelineResult;
 public class VisionModuleManagerTest {
     @BeforeAll
     public static void init() {
+        String classpathStr = System.getProperty("java.class.path");
+        System.out.print(classpathStr);
+
         TestUtils.loadLibraries();
+        try {
+            if (!PhotonTargetingJniLoader.load()) fail();
+        } catch (UnsatisfiedLinkError | IOException e) {
+            e.printStackTrace();
+            fail(e);
+        }
     }
 
     private static class TestSource extends VisionSource {
@@ -49,6 +62,8 @@ public class VisionModuleManagerTest {
         public TestSource(FrameProvider provider, CameraConfiguration cameraConfiguration) {
             super(cameraConfiguration);
             this.provider = provider;
+            if (getCameraConfiguration().cameraQuirks == null)
+                getCameraConfiguration().cameraQuirks = QuirkyCamera.DefaultCamera;
         }
 
         @Override
@@ -65,6 +80,19 @@ public class VisionModuleManagerTest {
         public boolean isVendorCamera() {
             return false;
         }
+
+        @Override
+        public boolean hasLEDs() {
+            return false;
+        }
+
+        @Override
+        public void remakeSettables() {
+            return;
+        }
+
+        @Override
+        public void release() {}
     }
 
     private static class TestSettables extends VisionSourceSettables {
@@ -73,7 +101,7 @@ public class VisionModuleManagerTest {
         }
 
         @Override
-        public void setExposure(double exposure) {}
+        public void setExposureRaw(double exposure) {}
 
         @Override
         public void setBrightness(int brightness) {}
@@ -100,6 +128,32 @@ public class VisionModuleManagerTest {
 
         @Override
         public void setAutoExposure(boolean cameraAutoExposure) {}
+
+        @Override
+        public double getMinExposureRaw() {
+            return 1;
+        }
+
+        @Override
+        public double getMaxExposureRaw() {
+            return 1234;
+        }
+
+        @Override
+        public void setAutoWhiteBalance(boolean autowb) {}
+
+        @Override
+        public void setWhiteBalanceTemp(double temp) {}
+
+        @Override
+        public double getMaxWhiteBalanceTemp() {
+            return 1;
+        }
+
+        @Override
+        public double getMinWhiteBalanceTemp() {
+            return 2;
+        }
     }
 
     private static class TestDataConsumer implements CVPipelineResultConsumer {
@@ -115,7 +169,9 @@ public class VisionModuleManagerTest {
     public void setupManager() {
         ConfigManager.getInstance().load();
 
-        var conf = new CameraConfiguration("Foo", "Bar");
+        var vmm = new VisionModuleManager();
+
+        var conf = new CameraConfiguration(PVCameraInfo.fromFileInfo("Foo", "Bar"));
         var ffp =
                 new FileFrameProvider(
                         TestUtils.getWPIImagePath(TestUtils.WPI2019Image.kCargoStraightDark72in_HighRes, false),
@@ -123,17 +179,17 @@ public class VisionModuleManagerTest {
 
         var testSource = new TestSource(ffp, conf);
 
-        var modules = VisionModuleManager.getInstance().addSources(List.of(testSource));
+        var module = vmm.addSource(testSource);
         var module0DataConsumer = new TestDataConsumer();
 
-        VisionModuleManager.getInstance().visionModules.get(0).addResultConsumer(module0DataConsumer);
+        module.addResultConsumer(module0DataConsumer);
 
-        modules.forEach(VisionModule::start);
+        module.start();
 
         sleep(1500);
 
-        Assertions.assertNotNull(module0DataConsumer.result);
-        printTestResults(module0DataConsumer.result);
+        assertNotNull(module0DataConsumer.result);
+        TestUtils.printTestResults(module0DataConsumer.result);
     }
 
     @Test
@@ -142,7 +198,7 @@ public class VisionModuleManagerTest {
 
         var vmm = new VisionModuleManager();
 
-        var conf = new CameraConfiguration("Foo", "Bar");
+        var conf = new CameraConfiguration(PVCameraInfo.fromFileInfo("Foo", "Bar"));
         conf.streamIndex = 1;
         var ffp =
                 new FileFrameProvider(
@@ -150,7 +206,7 @@ public class VisionModuleManagerTest {
                         TestUtils.WPI2019Image.FOV);
         var testSource = new TestSource(ffp, conf);
 
-        var conf2 = new CameraConfiguration("Foo2", "Bar");
+        var conf2 = new CameraConfiguration(PVCameraInfo.fromFileInfo("Foo2", "Bar2"));
         conf2.streamIndex = 0;
         var ffp2 =
                 new FileFrameProvider(
@@ -158,7 +214,7 @@ public class VisionModuleManagerTest {
                         TestUtils.WPI2019Image.FOV);
         var testSource2 = new TestSource(ffp2, conf2);
 
-        var conf3 = new CameraConfiguration("Foo3", "Bar");
+        var conf3 = new CameraConfiguration(PVCameraInfo.fromFileInfo("Foo3", "Bar3"));
         conf3.streamIndex = 0;
         var ffp3 =
                 new FileFrameProvider(
@@ -167,25 +223,21 @@ public class VisionModuleManagerTest {
         var testSource3 = new TestSource(ffp3, conf3);
 
         // Arducam OV9281 UC844 raspberry pi test.
-        var conf4 = new CameraConfiguration("Left", "dev/video1");
-        USBCameraSource usbSimulation = new USBCameraSource(conf4, 0x6366, 0x0c45, true);
+        var conf4 = new CameraConfiguration(PVCameraInfo.fromFileInfo("Left", "/dev/video1"));
+        USBCameraSource usbSimulation = new MockUsbCameraSource(conf4, 0x6366, 0x0c45);
 
-        var conf5 = new CameraConfiguration("Right", "dev/video2");
-        USBCameraSource usbSimulation2 = new USBCameraSource(conf5, 0x6366, 0x0c45, true);
+        var conf5 = new CameraConfiguration(PVCameraInfo.fromFileInfo("Right", "/dev/video2"));
+        USBCameraSource usbSimulation2 = new MockUsbCameraSource(conf5, 0x6366, 0x0c45);
 
         var modules =
-                vmm.addSources(
-                        List.of(testSource, testSource2, testSource3, usbSimulation, usbSimulation2));
+                List.of(testSource, testSource2, testSource3, usbSimulation, usbSimulation2).stream()
+                        .map(vmm::addSource)
+                        .toList();
 
         System.out.println(
                 Arrays.toString(
-                        modules.stream()
-                                .map(it -> it.visionSource.getCameraConfiguration().streamIndex)
-                                .toArray()));
-        var idxs =
-                modules.stream()
-                        .map(it -> it.visionSource.getCameraConfiguration().streamIndex)
-                        .collect(Collectors.toList());
+                        modules.stream().map(it -> it.getCameraConfiguration().streamIndex).toArray()));
+        var idxs = modules.stream().map(it -> it.getCameraConfiguration().streamIndex).toList();
 
         assertTrue(usbSimulation.equals(usbSimulation));
         assertTrue(!usbSimulation.equals(usbSimulation2));
@@ -195,13 +247,6 @@ public class VisionModuleManagerTest {
         assertTrue(idxs.contains(2));
         assertTrue(idxs.contains(3));
         assertTrue(idxs.contains(4));
-    }
-
-    private static void printTestResults(CVPipelineResult pipelineResult) {
-        double fps = 1000 / pipelineResult.getLatencyMillis();
-        System.out.print(
-                "Pipeline ran in " + pipelineResult.getLatencyMillis() + "ms (" + fps + " fps), ");
-        System.out.println("Found " + pipelineResult.targets.size() + " valid targets");
     }
 
     private void sleep(int millis) {
